# rust_bril

./: Cargo.toml  Makefile  README.md  RUNBOOK.md  lesson8_optimization_summary.csv  out.bril  out_non_ssa.bril  sad.txt  swappy.bril  test.bril  turnt.toml
benchmarks/core/: ackermann.ssa_lvn_dce_loop_prof  armstrong.ssa_prof  bbs.ssa_lvn_dce_prof  bin-search.prof  bin-search.ssa_loop_prof  bin-search.ssa_lvn_dce_loop_prof  bin-search.ssa_lvn_dce_prof  bin-search.ssa_prof  binary-fmt.ssa_prof  bitshift.ssa_dce_prof  bitshift.ssa_lvn_dce_prof  bitwise-ops.prof  bitwise-ops.ssa_loop_prof  bitwise-ops.ssa_lvn_dce_loop_prof  catalan.ssa_prof  check-primes.prof  check-primes.ssa_loop_prof  check-primes.ssa_lvn_dce_loop_prof  check-primes.ssa_lvn_dce_prof  dayofweek.ssa_dce_prof  dayofweek.ssa_loop_prof  dayofweek.ssa_lvn_dce_loop_prof  dayofweek.ssa_lvn_dce_prof  dayofweek.ssa_prof  delannoy.prof  delannoy.ssa_dce_prof  delannoy.ssa_lvn_dce_loop_prof  delannoy.ssa_lvn_dce_prof  delannoy.ssa_prof  digital-root.ssa_dce_prof  euclid.prof  euclid.ssa_dce_prof  euclid.ssa_loop_prof  euclid.ssa_lvn_dce_loop_prof  euclid.ssa_lvn_dce_prof  euclid.ssa_prof  fact.prof  fact.ssa_lvn_dce_loop_prof  fib_recursive.prof  (+95 more)
report/: lesson3.py  lesson3_benchmarks.json  lesson3_plot.py  lesson6.py  lesson6_benchmarks.json  lesson6_plot.py  lesson8_bench.py  lesson8_plot.py
src/: blocks.rs  bril_logger.rs  dominance.rs  lib.rs  main.rs  program.rs
src_sadness/: blocks.rs  dominance.rs  lib.rs  main.rs  program.rs  ssa.rs
tests/: README.md  test_cfg.rs  test_dominance.rs  test_transform.rs
(+192 files in other folders)
