[package]
name = "rust_bril"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_bril"
path = "src/lib.rs"

[[bin]]
name = "rust_bril"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
tempfile = "3.0"
glob = "0.3.3"
rayon = "1.11.0"
log4rs = "1.4.0"
thiserror = "2.0.17"
log = "0.4.28"
